--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
     "aos": "^3.0.0-beta.6",
-    "bootstrap": "^4.5.3",
-    "cra-template": "1.0.3",
-    "redux": "^4.0.5",
     "axios": "^0.19.0",
+    "bootstrap": "^4.6.0",
+    "cra-template": "1.0.3",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "react": "^16.10.1",
-    "react-dom": "^16.10.1",
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.4.3",
+    "react-bootstrap-validation": "^0.1.11",
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.1.2",
+    "reactstrap": "^8.9.0",
+    "redux": "^4.0.5",
     "styled-components": "^5.2.0"
   },
   "scripts": {
